--- a/src/main/webapp/app/index.html
+++ b/src/main/webapp/app/index.html
@@ -5,18 +5,37 @@
   <title>My AngularJS App</title>
   <link rel="stylesheet" href="css/angular-ui.css"/>
   <link rel="stylesheet" href="css/app.css"/>
+  <link rel="stylesheet" href="css/bootstrap.css"/>
 </head>
 <body>
-  <ul class="menu">
-    <li><a href="#/quiz-http">Our Quizzes! (use $http)</a></li>
-    <li><a href="#/quiz">Our Quizzes! (restful with $resource)</a></li>
-    <li><a href="#/newquiz">New quiz</a></li>
-  </ul>
 
-  <div ng-view></div>
+<div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar-inner">
+        <div class="container">
+            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </a>
+            <a class="brand" href="#/quiz">Quizzo</a>
+            <div class="nav-collapse collapse">
+                <ul class="nav">
+                    <li><a href="#/quiz">Our Quizzes!</a></li>
+                    <li><a href="#/newquiz">New quiz</a></li>
+                </ul>
+            </div><!--/.nav-collapse -->
+        </div>
+    </div>
+</div>
 
-  <div id="footer">
-      The Quiz App, v<span app-version></span></div>
+<div class="container">
+    <br/><br/> <br/>
+    <div ng-view></div>
+</div> <!-- /container -->
+
+<div id="footer">
+      The Quiz App, v<span app-version></span>
+</div>
 
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.2/angular.min.js"></script>
@@ -29,11 +48,14 @@
   <script src="lib/angular/angular-ui.js"></script>
   <script src="http://fiddle.tinymce.com/tinymce/3.5.4.1/jquery.tinymce.js"></script>
   <script src="http://fiddle.tinymce.com/tinymce/3.5.4.1/tiny_mce_jquery_src.js"></script>
+  
+  <script src="js/bootstrap.js"></script>
 
   <script src="js/app.js"></script>
   <script src="js/services.js"></script>
   <script src="js/controllers.js"></script>
   <script src="js/filters.js"></script>
   <script src="js/directives.js"></script>
+  
 </body>
 </html>
